Adding swagger doc to project
